--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-hook-form": "^6.12.2",
     "react-images-upload": "^1.2.8",
+    "react-places-autocomplete": "^7.3.0",
     "react-scripts": "4.0.1",
+    "react-uuid": "^1.0.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
