--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-images-upload": "^1.2.8",
+    "react-lottie": "^1.2.3",
     "react-places-autocomplete": "^7.3.0",
+    "react-rough-notation": "^1.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-uuid": "^1.0.2",
